--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
             ><span class="change"> S</span><span class="change">t</span
             ><span class="change">u</span><span class="change">d</span
             ><span class="change">i</span><span class="change">o</span>
+            <span class="change">s</span>
           </p>
         </div>
         <div class="slider-container">
