--- a/openstudio.html
+++ b/openstudio.html
@@ -41,7 +41,8 @@
             ><span class="change">0</span><span class="change">m</span
             ><span class="change"> S</span><span class="change">t</span
             ><span class="change">u</span><span class="change">d</span
-            ><span class="change">i</span><span class="change">o</span>
+            ><span class="change">i</span><span class="change">o</span
+            ><span class="change">s</span>
           </p>
         </div>
         <div class="slider-container">
