--- a/about.html
+++ b/about.html
@@ -88,10 +88,10 @@
             >
               100m</span
             >
-            is an ever-growing network of self-governing studios that aim to
-            create a space fostering interconnection among students from various
-            disciplines to publish, share, create and cultivate a communal
-            practice —to bring to life projects we deeply care about.
+            is a network of self-governing studios with the common goal to
+            create a space that fosters interconnection among its members; A
+            space to create, publish, share, and cultivate a communal practice
+            —a community.
           </div>
           <div class="header-right-alter-gallery"></div>
         </div>
