--- a/openstudio.html
+++ b/openstudio.html
@@ -68,10 +68,12 @@
             <a href="mailto:100mc.studio@gmail.com" class="contactlinks"
               >email</a
             >
-            <a href="https://www.are.na/100m-studio" class="contactlinks"
+            <a href="https://www.are.na/100m-studios" class="contactlinks"
               >are.na</a
             >
-            <a href="https://www.instagram.com/100mstudio/" class="contactlinks"
+            <a
+              href="https://www.instagram.com/100mstudios/"
+              class="contactlinks"
               >instagram</a
             >
           </div>
