--- a/directory.html
+++ b/directory.html
@@ -57,7 +57,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="https://feed.100m.studio" class="pagelinks">Feed</a>
+            <a href="https://feed.100m.studio" target="_blank" class="pagelinks"
+              >Feed</a
+            >
             <a href="directory.html" class="pagelinks active">Directory</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
             <a href="about.html" class="pagelinks">About</a>
