--- a/openstudio.html
+++ b/openstudio.html
@@ -58,7 +58,9 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="https://feed.100m.studio" class="pagelinks">Feed</a>
+            <a href="https://feed.100m.studio" target="_blank" class="pagelinks"
+              >Feed</a
+            >
             <a href="directory.html" class="pagelinks">Directory</a>
             <a href="openstudio.html" class="pagelinks active">Open studio</a>
             <a href="about.html" class="pagelinks">About</a>
