--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
     <div class="main">
       <div class="container-right">
         <div class="header-right">
+          <div class="block-title">Alternative Practices Symposium</div>
+          <div class="block-content">
+            We are excited to announce our first student run symposium! With 3
+            panels of speakers we are looking forward to a day of discussion and
+            learning. (we are purple now!)
+            <br />
+            <a
+              href="https://alt.100m.studio"
+              target="_blank"
+              class="block-content-link"
+            >
+              Check Alt-Practices website for more info!</a
+            >
+            <br />
+            <img
+              src="https://d2w9rnfcy7mm78.cloudfront.net/36026056/original_c52eb97fd16477049f5a1e061504b905.jpg?1744772988?bc=0"
+              alt=""
+              class="block-img"
+            />
+          </div>
+        </div>
+        <div class="header-right">
           <div class="block-title">100m Screenings!</div>
           <div class="block-content">
             Join us every Wednesday for free film screenings!
