--- a/colophon.html
+++ b/colophon.html
@@ -158,7 +158,7 @@
               </li>
               <li>
                 Written acknowledgments do not exist in the past, rather they
-                signify an important effort. The first step on a long arduous
+                signify an on-going effort. The first step on a long arduous
                 path to reconstruct and reevaluate our relationship to the land
                 we live in, to it's history, to our earth.
               </li>
