--- a/100mgrant.html
+++ b/100mgrant.html
@@ -23,7 +23,7 @@
     ></script>
     <script src="app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
-    <title>100m — work</title>
+    <title>100m — publication grant</title>
   </head>
   <body>
     <div class="popup">
@@ -78,6 +78,13 @@
             >
             you’ll help us support and create more publications, more
             collaboration, more care and more generosity.
+            <br /><br />
+            You can send your donation via e-transfer to
+            <span class="mtag2" style="color: var(--accent-color)"
+              >amirnevis99@gmail.com</span
+            >
+            with {100m grant + your name} as the message. THANK YOU!
+
             <br /><br />
             <img
               src="img/grant-2.jpg"
