--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       integrity="sha256-Lsk+CDPOzTapLoAzWW0G/WeQeViS3FMzywpzPZV8SXk="
       crossorigin="anonymous"
     ></script>
-    <script src="app.js" defer></script>
+    <!-- <script src="app.js" defer></script> -->
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
     <script src="archive.js" defer></script>
     <title>100m — work</title>
@@ -58,9 +58,7 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="https://feed.100m.studio" target="_blank" class="pagelinks"
-              >Feed</a
-            >
+            <a href="feed.html" target="_blank" class="pagelinks">Feed</a>
             <a href="directory.html" class="pagelinks">Directory</a>
             <a href="openstudio.html" class="pagelinks">Open studio</a>
             <a href="about.html" class="pagelinks active">About</a>
