updated to add open studio schedule link

--- a/openstudio.html
+++ b/openstudio.html
@@ -96,6 +96,14 @@
               an email
             </a>
             to plan and organize your event.
+						<br />
+
+            
+            You can also refer to the  
+            <a href="https://docs.google.com/spreadsheets/d/1exTjZEJlLDOOejVCamBSMyawEfGz1t1JWjRJZ_g415Y/edit?gid=625925084#gid=625925084" class="block-content-link">
+              Open Studio Schedule
+            </a>
+						to see available spots!
             <!-- <img
               src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
               alt=""
