ok this is good...

--- a/openstudio.html
+++ b/openstudio.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,31 +7,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
-      integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"
-      integrity="sha256-Lsk+CDPOzTapLoAzWW0G/WeQeViS3FMzywpzPZV8SXk="
-      crossorigin="anonymous"
-    ></script>
-    <script src="app.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
-    <script src="archive.js" defer></script>
     <title>100m — work</title>
   </head>
   <body>
     <div class="popup">
-      <img src="" alt="" class="popup-content" />
-      <span class="notice-container"></span>
-      <!-- </div> -->
+      <div src="" alt="" class="popup-content">
+        <span class="notice-container"></span>
+      </div>
     </div>
     <div class="navbar">
       <div class="navbar-container">
@@ -58,7 +41,7 @@
         <div class="pagemain">
           <div class="pages">
             <a href="index.html" class="pagelinks">Home</a>
-            <a href="feed.html" target="_blank" class="pagelinks">Feed</a>
+            <a href="feed.html" target="_blank" class="pagelinks ">Feed</a>
             <a href="directory.html" class="pagelinks">Directory</a>
             <a href="openstudio.html" class="pagelinks active">Open studio</a>
             <a href="about.html" class="pagelinks">About</a>
@@ -104,135 +87,12 @@
               Open Studio Schedule
             </a>
 						to see available spots!
-            <!-- <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
-              alt=""
-              class="block-img"
-            /> -->
           </div>
         </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 05 — November 30th</div>
-          <div class="block-content">
-            Join our last fall meeting!
-            <a href="https://news.100m.studio/" class="block-content-link">
-              Read more about it here
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24942486/original_89fc9e7ac6b7edcb8b0ba5a1baa2460d.gif?1701136900?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 04 — November 23rd</div>
-          <div class="block-content">
-            Thanks everyone to everyone who joined the typeface workshop <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-04-2023-11-23"
-              class="block-content-link"
-            >
-              •• Meeting notes••
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24942737/original_7160c2e8e03c065b67c39860045145e6.gif?1701139144?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 03 — November 16th</div>
-          <div class="block-content">
-            Thanks for coming to the third meeting!
 
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24747610/original_64c4d503372eb6decb281db6fe6e56ac.gif?1700091920?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 02 — November 9th</div>
-          <div class="block-content">
-            Thanks everyone who came to our first Open Studio meeting! <br />
-            <a
-              href="https://vaskoso.github.io/Digital-Garden/"
-              class="block-content-link"
-            >
-              Link to our digital Garden
-            </a>
-            <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-02-2023-11-09"
-              class="block-content-link alter"
-            >
-              •• Meeting notes••
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24507778/original_50cdb750b37d85cb639d9d506629f083.jpg?1698987755?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Open Studio 01 — November 2nd</div>
-          <div class="block-content">
-            Thanks everyone who came to our first Open Studio meeting! <br />
-            <a
-              href="https://www.are.na/100m-studio/notes-open-studio-01-2023-11-02"
-              class="block-content-link"
-            >
-              Check out notes and posters here
-            </a>
-            <br />
-            <img
-              src="https://d2w9rnfcy7mm78.cloudfront.net/24473507/original_03365cf2863cdabd9b49bd96e18b0302.gif?1698846611?bc=0"
-              alt=""
-              class="block-img"
-            />
-          </div>
-        </div>
-        <div class="header-right">
-          <div class="block-title">Joining 100m?!</div>
-          <div class="block-content">
-            <a
-              href="https://forms.office.com/r/GXufCZLkn2"
-              class="block-content-link"
-              >Fill this form </a
-            >to get updates from us! <br />
-            <a
-              href="https://chat.whatsapp.com/KrUpP9RoIeDKYu3ks2NNa0"
-              class="block-content-link"
-              >Open studio whatsapp </a
-            >link
-          </div>
-        </div>
-        <div class="header-right">
-          <p class="block-title">Our first meeting!</p>
-          <p class="block-content">
-            meet us october 26th, 100mcCaul — room 656, 6:30pm
-          </p>
-          <img
-            class="block-img"
-            src="https://d2w9rnfcy7mm78.cloudfront.net/24261243/original_3854b371432e4f27fba32ae07f4a72b6.jpg?1697788884?bc=0"
-          />
-        </div>
-      </div>
-      <div class="container-side">
-        <div class="header-right-alter">
-          <div class="block-title alter">tags</div>
-          <a href="https://news.100m.studio" class="filter-btn">Open studio</a>
-          <!-- <div class="block-content alter">What we create together:</div> -->
-        </div>
       </div>
     </div>
   </body>
+
+	<script src="feed.js"></script>
 </html>
